# evm-tracing-samples

./: .gitignore  README.md
python/: main.py  requirements.txt
rust/: .env.example  Cargo.toml
rust/src/: lib.rs  main.rs  trace.rs  utils.rs
