[package]
name = "revm-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
dashmap = "5.4.0"
hex-literal = "0.4"
hex = "0.4.3"
bytes = "1.4.0"
dotenv = "0.15.0"
auto_impl = { version = "1.1", default-features = false }

# ethers
ethers-providers = "2.0"
ethers-core = "2.0"
ethers-contract = { version = "2.0.3", default-features = false }
ethers = {version = "2.0.7", features = ["abigen", "ws", "rustls"]}

# async
futures = "0.3.27"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }

# logging
log = "0.4.17"
fern = {version = "0.6.2", features = ["colored"]}
chrono = "0.4.23"
colored = "2.0.0"

# github
cfmms = { git = "https://github.com/0xKitsune/cfmms-rs.git" }
anvil = { git = "https://github.com/foundry-rs/foundry.git" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry.git" }